--- a/_config.yml
+++ b/_config.yml
@@ -7,6 +7,7 @@ first_name: Aditya
 middle_name: 
 last_name: Khemka
 contact_note: >
+cv_pdf: cv.pdf
   
 description: > # the ">" symbol means to ignore newlines until "footer_text:"
   A simple, whitespace theme for academics. Based on [*folio](https://github.com/bogoli/-folio) design.
