--- a/_data/coauthors.yml
+++ b/_data/coauthors.yml
@@ -1,6 +1,8 @@
 "tsomocos":
   - firstname: ["Dimitrios", "Dimitrios P.", "D.P."]
+    url: https://tsomocos.org
 
 "hyland":
   - firstname: ["Charles", "C. Charles", "Charles Christopher"]
+    url: https://au.linkedin.com/in/charles-hyland
   
